# Essay-Feedback-Writer

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.ko.md  README.md  alembic.ini  deployment.ko.md  deployment.md  development.ko.md  development.md  docker-compose.override.yaml  docker-compose.test.yaml  docker-compose.traefik.yaml  docker-compose.yaml  main.py  models.py  readme.ko.md  readme.md  requirement.in  requirement.txt
backend/: Dockerfile  README.ko.md  README.md  main.py  prestart.sh  pyproject.toml  readme.ko.md  readme.md  requirements.in  requirements.txt
backend/app/: initial_data.py  main.py  models.py
backend/app/agents/: __init__.py  aggregator.py  builder.py  loader.py  schema.py  swarm.py
backend/app/agents/configs/: ielts_task2.yaml
backend/app/agents/configs/ksat/: cau_2024_humanities_q1.yaml  cau_2024_humanities_q2.yaml  cau_2024_humanities_q3.yaml  (+11 more)
backend/app/api/: deps.py  main.py
backend/app/api/routes/: chat_router.py  ielts_router.py  ksat_router.py  shared_router.py  user_router.py  util_router.py
backend/app/api/utils/: chat_utils.py  user_utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: ai_provider_crud.py  api_model_crud.py  bot_crud.py  chat_crud.py  essay_crud.py  exam_crud.py  example_essay_crud.py  feedback_crud.py  prompt_crud.py  rubric_criterion_crud.py  rubric_crud.py  user_api_key_crud.py  user_crud.py
backend/app/data/: AI_provider.csv  API_Model.csv  bots.csv
backend/app/data/ielts/: IELTS_writing_task_2_band_descriptions.csv  example_essays.csv
backend/app/data/ksat/: seed_ksat_data.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0090ff70bdf8_change_last_used_column_nullable.py  03a571588e51_change_last_used_column_nullable.py  040751ac97bf_add_exam_type_to_exams.py  65fbf7ac0f2a_initial_schema.py  a0cfd46df880_initial_schema.py  a5b6c7d8e9f0_add_rubric_name_to_exam_questions.py  aa34664b3455_add_handwriting_fields_to_essay.py  aa406b2ebf58_add_api_key_name.py  b6c7d8e9f0a1_drop_exam_content.py  bb8e68173f49_last_used_add_in_api_key_table.py  c1a2b3d4e5f6_add_domain_to_prompts.py  c7d8e9f0a1b2_add_duration_minutes_to_exams.py  d2b3c4e5f6a7_add_ksat_exam_models.py  d7f55738d45e_change_the_column_names.py  da4916b9597e_.py  e1ec562a03d9_change_api_key_name_default_function.py  e3c4d5f6a7b8_replace_passages_with_exam_content.py  f4d5e6a7b8c9_add_content_to_exam_questions.py
backend/app/prompts/: ielts_prompt.py
backend/app/schemas/: ai_provider_schema.py  api_model_schema.py  bot_schema.py  chat_schema.py  essay_schema.py  exam_schema.py  example_essay_schema.py  feedback_schema.py  prompt_schema.py  rubric_criterion_schema.py  rubric_schema.py  user_api_key_schema.py  user_schema.py
backend/app/services/: feedback_service.py
backend/app/tests/: conftest.py
backend/app/tests/agents/: test_aggregator.py  test_builder.py  test_loader.py  test_schema.py  test_swarm.py
backend/app/tests/core/: test_db.py
backend/app/tests/crud/: test_ai_provider.py  test_api_model.py  test_bot.py  test_chat.py  test_essay.py  test_feedback.py  test_prompt.py  test_user.py  test_user_api_key.py
backend/app/tests/data/: test_ksat_seed_registry.py
backend/app/tests/utils/: chat.py  user.py
backend/domain/chat/: chat_crud.py  chat_router.py
backend/domain/user/: user_crud.py  user_router.py  user_schema.py
backend/migrations/: env.py
backend/scripts/: prestart.sh  start-prod.sh  start-reload.sh
(+161 files in other folders)
